--- a/build.gradle
+++ b/build.gradle
@@ -148,6 +148,10 @@ allprojects {
         compileOnly 'rhino:js:1.7R2'
         compileOnly 'com.github.ben-manes.caffeine:caffeine:3.0.6'
         compileOnly 'org.apache.commons:commons-lang3:3.12.0'
+
+
+        // Local JAR file
+        compileOnly files('D:\\mymc\\Iris\\libs\\HMCLeaves-1.1.2.jar')
     }
 
     /**
